# SoCS2026-HA-LMAPF

./: README.md  pyproject.toml  requirements.txt
configs/: ablation_no_comms.yaml  ablation_no_humans.yaml  human_adversarial.yaml  human_aisle_boltzmann.yaml  human_mixed.yaml  one_shot_mapf.yaml  one_shot_mapf_with_humans.yaml  random_20x20.yaml  solver_cbs_vs_lacam.yaml  warehouse_large.yaml  warehouse_small.yaml
configs/eval/: ablation_no_conflict_res.yaml  ablation_no_local_repair.yaml  ablation_no_local_replan.yaml  ablation_no_safety.yaml  ablation_soft_safety.yaml  allocator_auction.yaml  (+35 more)
docs/: GETTING_STARTED.md  README_TESTS.md  experimental_setup.md  fine_tune.md  metrics.md  proposed_approach.md
figures/: results_summary.txt  table_baselines.tex
scripts/: convert_scen_to_json.py  download_movingai_maps.py  generate_random_map.py  make_task_streams.py  plot_solver_baseline_overview.py  plot_solver_study.py  plot_tuning_results.py  run_experiments.py  run_gui.py  run_hyperparameter_tuning.py  run_oneshot_gui.py  run_oneshot_hamapf_gui.py  run_solver_study.py
tests/: test_allocators.py  test_baseline.py  test_cbs_solver.py  test_conflict_resolvers.py  test_core_grid.py  test_core_types.py  test_environment.py  test_human_models.py  test_human_prediction.py  test_lacam_solver.py  test_local_planner.py  test_local_safety.py  test_map_loading.py  test_metrics.py  test_official_solver_wrappers.py  test_one_shot_mapf.py  test_partial_observability.py  test_receding_horizon_handoff.py  test_task_stream.py  test_token_passing.py  test_vertex_edge_conflicts.py
(+119 files in other folders)
